💄 Fix calculator button overflow

--- a/src/app/components/calculator/calculator.component.scss
+++ b/src/app/components/calculator/calculator.component.scss
@@ -18,7 +18,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 0.6em;
-
+    grid-template-columns: repeat(auto-fit, minmax(1fr));
     button {
       height: 4rem;
     }
